 - More accurate memory usage since caches are omitted
 - JSON-P
 - Won't barf if ob_start or ob_gzhandler don't exist
 - Better OpenBSD support
 - Added Chinese/Finish/Italian translations
 - Date format customizable in config

v1.10 1/17/2014
 - Regex filtering for filesystem mountpoints
 - Fixed redhat icon
 - Multiple color scheme support

v1.11 5/2/2014
 - Intelligent output handling when running from cli
 - Adding some extentions to main git tree instead of packaging them separately
 - Better support for OS X Mavericks
 - Virtualization detection for Linux
 - CPU Usage reporting for Linux

v2.0 7/7/2014
 - Major refactor: no global vars; easier to use
   simply as a library by third party apps
 - Added unit tests via PHPUnit
 - added utorrent web ui parsing extension
 - proper fqdn resolution on linux using /etc/hosts
   if version reported by sysctl isn't fully qualified
 - all inline exit's converted to exceptions so this can be used as a library
   without fear of killing whichever app uses it
 - More detailed network detection type on Linux
 - CYGWIN support removed as it was pointless
 - Removed getAll() function from all info classes in favor of a unified 
   behavior in the Linfo->scan() method
 - Tweaks to common functions
 - Biting composer koolaid

v2.0.1 7/7/2014
 - Bugfix: services not showing up on Linux

v2.0.2 11/24/2014
 - Some layout/css fixes
 - Converted layout/themes to use sass templating
 - Added motherboard detection for Linux
 - Made hwmon Linux parsing more intricate and work on newer kernels
 - Fixed Windows and other OSs bug where parser functions are all private

v?.?.? ??/??/????
 - Showing IP is now optional
 - James Price added Grunt functionality, cleaned up sass themes, added new theme
 - Fixed some CUPS parsing, and some other ideas from Stefan Briest
 - Adding icon for Raspbian distro, since I see a lot of RPI installs on google
 - Added linux mdadm raid10 detection
 - Frogg added a new theme and better css for mobile